{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 383,
  "lineage": "65c6125c-5974-a3e4-1298-9bda1fa50198",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0fb8f62069e122297",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb8f62069e122297",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a7f19b105205fae6"
              }
            ],
            "primary_network_interface_id": "eni-0a7f19b105205fae6",
            "private_dns": "ip-172-31-26-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.169",
            "public_dns": "ec2-13-218-90-111.compute-1.amazonaws.com",
            "public_ip": "13.218.90.111",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b0527f60734a1d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_client_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Client-Indirect"
            },
            "tags_all": {
              "Name": "Client-Indirect"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0594b3ea032e7664f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0fb8f62069e122297",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.rabbitmq",
            "aws_security_group.client_sg",
            "aws_security_group.rabbitmq_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0c834bd40ec6e9c81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c834bd40ec6e9c81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0877125e30b4c89ef"
              }
            ],
            "primary_network_interface_id": "eni-0877125e30b4c89ef",
            "private_dns": "ip-172-31-18-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.106",
            "public_dns": "ec2-54-221-145-35.compute-1.amazonaws.com",
            "public_ip": "54.221.145.35",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fad0830d33863d77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_postgres_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Postgres-Indirect"
            },
            "tags_all": {
              "Name": "Postgres-Indirect"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02225deccd0e63123"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0c834bd40ec6e9c81",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.client_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0f575282112185832",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f575282112185832",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0323996165490203b"
              }
            ],
            "primary_network_interface_id": "eni-0323996165490203b",
            "private_dns": "ip-172-31-23-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.34",
            "public_dns": "ec2-54-234-19-8.compute-1.amazonaws.com",
            "public_ip": "54.234.19.8",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ca2e7d8b3e07e22",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_rabbitmq_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "RabbitMQ-Server"
            },
            "tags_all": {
              "Name": "RabbitMQ-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b83e00d58492ab06"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0f575282112185832",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0dd6cea520459acde",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd6cea520459acde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08bb3ab95c7af09fc"
              }
            ],
            "primary_network_interface_id": "eni-08bb3ab95c7af09fc",
            "private_dns": "ip-172-31-19-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.234",
            "public_dns": "ec2-54-242-120-190.compute-1.amazonaws.com",
            "public_ip": "54.242.120.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad4450f4dff14017",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_worker_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Worker-Indirect-1"
            },
            "tags_all": {
              "Name": "Worker-Indirect-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8faa616310cd604"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0dd6cea520459acde",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.postgres",
            "aws_instance.rabbitmq",
            "aws_security_group.client_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-09124a7330d45d6f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09124a7330d45d6f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-095a075d65469c189"
              }
            ],
            "primary_network_interface_id": "eni-095a075d65469c189",
            "private_dns": "ip-172-31-24-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.122",
            "public_dns": "ec2-13-220-116-87.compute-1.amazonaws.com",
            "public_ip": "13.220.116.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020a23e7c0e8c255a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_worker_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Worker-Indirect-2"
            },
            "tags_all": {
              "Name": "Worker-Indirect-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8faa616310cd604"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-09124a7330d45d6f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.postgres",
            "aws_instance.rabbitmq",
            "aws_security_group.client_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0d5ac53aebbf72f61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5ac53aebbf72f61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018e62e698ac7d1d2"
              }
            ],
            "primary_network_interface_id": "eni-018e62e698ac7d1d2",
            "private_dns": "ip-172-31-22-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.176",
            "public_dns": "ec2-54-146-157-164.compute-1.amazonaws.com",
            "public_ip": "54.146.157.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4c27418405057e7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_worker_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Worker-Indirect-3"
            },
            "tags_all": {
              "Name": "Worker-Indirect-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8faa616310cd604"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0d5ac53aebbf72f61",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.postgres",
            "aws_instance.rabbitmq",
            "aws_security_group.client_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0521cb2d60cfbb1a6",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-014ecd443ce7b49a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014ecd443ce7b49a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f441bc36a5274b3e"
              }
            ],
            "primary_network_interface_id": "eni-0f441bc36a5274b3e",
            "private_dns": "ip-172-31-24-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.221",
            "public_dns": "ec2-34-235-129-250.compute-1.amazonaws.com",
            "public_ip": "34.235.129.250",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06eb99b688e493f6e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "indirect_worker_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d6168b5761a8409",
            "tags": {
              "Name": "Worker-Indirect-4"
            },
            "tags_all": {
              "Name": "Worker-Indirect-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8faa616310cd604"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-014ecd443ce7b49a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.postgres",
            "aws_instance.rabbitmq",
            "aws_security_group.client_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.rabbitmq_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0594b3ea032e7664f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0594b3ea032e7664f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "indirect_client_sg",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0594b3ea032e7664f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-02225deccd0e63123",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02225deccd0e63123",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0594b3ea032e7664f",
                  "sg-0f8faa616310cd604"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "indirect_postgres_sg",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-02225deccd0e63123",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.client_sg",
            "aws_security_group.worker_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0b83e00d58492ab06",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b83e00d58492ab06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "indirect_rabbitmq_sg",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0b83e00d58492ab06",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0f8faa616310cd604",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8faa616310cd604",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "indirect_worker_sg",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0f8faa616310cd604",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}